--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head lang="uk">
     <meta charset="UTF-8">
-    <title>My Page</title>
+    <title>My Pager</title>
 
 
     <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
+
 <body>
-<h1>Hello World</h1>
-<p>Hello Git</p>
-<div class="text2018">Hi 2018!!!</div>
+    <h1>Hello World</h1>
+    <p>Hello Git</p>
+    <div class="text2018">Hi 2018!!!</div>
 </body>
+
 </html>
