--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head lang="uk">
     <meta charset="UTF-8">
-    <title>My Pager</title>
+    <title>My Pagers</title>
 
 
     <link rel="stylesheet" type="text/css" href="main.css" />
