--- a/index.html
+++ b/index.html
@@ -1,18 +1,46 @@
 <!DOCTYPE html>
 <html>
-
-<head lang="uk">
-    <meta charset="UTF-8">
-    <title>My Pagers</title>
-
-
+  <head lang="uk">
+    <meta charset="UTF-8" />
+    <title>My Page</title>
     <link rel="stylesheet" type="text/css" href="main.css" />
-</head>
+  </head>
 
-<body>
-    <h1>Hello World</h1>
-    <p>Hello Git</p>
-    <div class="text2018">Hi 2018!!!</div>
-</body>
-
+  <body
+    style="background-color: #DADADA; font-family: Arial, Helvetica, sans-serif"
+  >
+    <div class="container">
+      <div style="padding: 10px; width: 60%; min-width: 300px;">
+        <div class="minicont">
+          <input />
+          <div class="product">
+            <div class="label">
+              Помідори
+            </div>
+            <div class="count">
+              <button class="round_button" id="cancel">-</button>
+              <span class="numlabel">3</span>
+              <button class="round_button">+</button>
+            </div>
+            <div class="buttons">
+              <button class="button">Купленo</button>
+              <button class="button" id="cancel">x</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div style="padding: 10px; width: 30%">
+        <div class="minicont">
+          <div class="bl-title"><h3>Залишилося</h3></div>
+          <div class="left">
+            <span class="item"
+              >Tomatos
+              <span class="orange-button">1</span>
+            </span>
+          </div>
+          <div class="bl-title"><h3>Куплене</h3></div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
