round buttons are cool, orange are round, but text not iin the middle

--- a/index.html
+++ b/index.html
@@ -31,14 +31,18 @@
       </div>
       <div style="padding: 10px; width: 30%">
         <div class="minicont">
-          <div class="bl-title"><h3>Залишилося</h3></div>
+          <div class="bl-title"><h3 style="margin: 0">Залишилося</h3></div>
           <div class="left">
             <span class="item"
               >Tomatos
               <span class="orange-button">1</span>
             </span>
+            <span class="item"
+              >Cookies
+              <span class="orange-button">2</span>
+            </span>
           </div>
-          <div class="bl-title"><h3>Куплене</h3></div>
+          <div class="bl-title"><h3 style="margin: 0">Куплене</h3></div>
         </div>
       </div>
     </div>
