[pr2]-added bage with animated hover

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
       </div>
     </div>
   </div>
+  <div class="bage">
+    <div style="padding: 0.5em">Buy List</div>
+
+  </div>
 </body>
 
 </html>
