[pr2]-added my name on bage.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
   </div>
   <div class="bage">
     <div style="padding: 0.5em">Buy List</div>
-
+    <div class="name">
+      Created by: <br />
+      <div style="font-size: 1.3em">Katia Antoshyna</div>
+    </div>
   </div>
 </body>
 
