--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 <body style="background-color: #DADADA; font-family: Arial, Helvetica, sans-serif">
   <div class="container">
-    <div class="minicont" style=" width: 60%; min-width: 300px;">
+    <div class="minicont" id="leftcont" style=" width: 60%; min-width: 300px;">
       <div class="my-input">
-        <input type="text" placeholder="Назва товару" style="box-sizing: border-box; width: 100%" />
-        <button class="add tooltip">Додати<span class="tooltiptext">Add</span></button>
+        <input type="text" id="myInput" placeholder="Назва товару" style="box-sizing: border-box; width: 100%" />
+        <button class="add tooltip" onclick="addProduct()">Додати<span class="tooltiptext">Add</span></button>
       </div>
-      <div class="product">
+      <div class="product" id="Помідори">
         <div class="label">
           Помідори
         </div>
@@ -28,7 +28,7 @@
           <button class="button tooltip" id="cancel">x<span class="tooltiptext">Cancel</span></button>
         </div>
       </div>
-      <div class="product">
+      <div class="product" id="Печиво">
         <div class="label">
           Печиво
         </div>
@@ -42,8 +42,30 @@
           <button class="button tooltip" id="cancel">x<span class="tooltiptext">Cancel</span></button>
         </div>
       </div>
+      <div class="product" id="Сир">
+        <div class="label">
+          Сир
+        </div>
+        <div class="count">
+          <button class="round_button tooltip" id="cancel">-
+            <span class="tooltiptext">Decrement</span>
+          </button>
+          <span class="numlabel">1</span>
+          <button class="round_button tooltip">+
+            <span class="tooltiptext">Increment</span>
+          </button>
+        </div>
+        <div class="buttons">
+          <button class="button tooltip">Купленo
+            <span class="tooltiptext">Bought</span>
+          </button>
+          <button class="button tooltip" id="cancel">x
+            <span class="tooltiptext">Cancel</span>
+          </button>
+        </div>
+      </div>
     </div>
-    <div class="minicont" style=" width: 30%">
+    <div class="minicont" id="rightcont" style=" width: 30%">
       <div class="bl-title" style="border-bottom: 1px solid grey">
         <h3 style="margin: 0">Залишилося</h3>
       </div>
@@ -54,19 +76,24 @@
         <span class="item">Печиво
           <span class="orange-button">2</span>
         </span>
+        <span class="item">Сир
+          <span class="orange-button">1</span>
+        </span>
       </div>
       <div class="bl-title" style="border-top: 1px solid grey">
         <h3 style="margin: 0">Куплено</h3>
       </div>
+      <div id="cart"></div>/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
     </div>
   </div>
   <div class="bage">
-    <div style="padding: 0.5em">Buy List</div>
+    <div class="buylist">Buy List</div>
     <div class="name">
       Created by: <br />
       <div style="font-size: 1.3em">Katia Antoshyna</div>
     </div>
   </div>
+  <script src='main.js'></script>
 </body>
 
 </html>
