--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="bl-title" style="border-bottom: 1px solid grey">
         <h3 style="margin: 0">Залишилося</h3>
       </div>
-      <div class="left">
+      <div id="left">
         <span class="item">Помідори
           <span class="orange-button">3</span>
         </span>
@@ -83,7 +83,7 @@
       <div class="bl-title" style="border-top: 1px solid grey">
         <h3 style="margin: 0">Куплено</h3>
       </div>
-      <div id="cart"></div>/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
+      <div id="cart"></div> /*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
     </div>
   </div>
   <div class="bage">
