--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="bl-title" style="border-top: 1px solid rgb(206, 200, 200)">
         <h3 style="margin: 0">Куплено</h3>
       </div>
-      <div class="cart"></div>
+      <div id="cart"></div>
       <!--/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/-->
     </div>
   </div>
