[pr3]-2,6,7 ready, 1 without enter, 4 almost done, 3 and 5 not made.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
       </div>
       <div id="cart"></div>
       <!--/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/-->
+      <span class="item" id="bought-item_template" style="text-decoration: line-through">
+        <span class="orange-button"></span>
+      </span>
+
     </div>
   </div>
   <div class="bage">
