[pr-3]-READY TO BE CHECKED (bug is only with spaces in product name)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             Купленo<span class="tooltiptext">Bought</span>
           </button>
           <button class="button tooltip cancel">
-            x<span class="tooltiptext">Cancel</span>
+            x<span class="tooltiptext">Delete</span>
           </button>
 
         </div>
